<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/REGISTER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="77dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/starlabs" />

    <Button
        android:id="@+id/REGISTER"
        android:layout_width="167dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@+id/RESET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/RESET"
        android:layout_width="167dp"
        android:layout_height="56dp"
        android:layout_marginBottom="43dp"
        android:background="@android:color/white"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/REGISTER" />

    <TextView
        android:id="@+id/Clear_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="308dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="serif-monospace"
        android:text="@string/clear_filed"
        android:textColor="#FF0000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>